# AI-Foundation-Kit

./: .gitignore  ARCHITECTURE.md  CONSTITUTION.md  QUICKSTART.md  README.md  aeos.toml  pyproject.toml
.github/workflows/: ci.yml
docs/: AI-DEVELOPMENT-POLICY.md  DECISIONS.md  SECURITY.md  SOVEREIGNTY.md
docs/evidence/: AEOS-WORKSPACE-REGISTRY-E2E.md  AEOS-WORKSPACE-UX-COMPLETION.md  MA-MAIRIE-DIGITALE-DASHBOARD-EVIDENCE.md
docs/features/: AEOS-BUILD-RAIL.md  AEOS-EVIDENCE-PACK.md  AEOS-MEMORY-LAYER.md  AEOS-PORTFOLIO.md  AEOS-PROJECT-REGISTRY.md  AEOS-PROJECT-WORKSPACE.md  AEOS-RECLAIM-HARDEN.md  AEOS-RECLAIM-RECOVERY.md  AEOS-SUPABASE-RLS-HARDENING.md  AEOS-UI-DASHBOARD.md  AEOS-WORKSPACE-DEMO.md  AEOS-WORKSPACE-INIT.md  AEOS-WORKSPACE-UX.md
docs/operations/: AEOS-AI-MAC-WORKSTATION-SETUP.md  AEOS-NEXT-ACTIONS.md  AEOS-SPRINT-LOG.md
docs/strategy/: AEOS-PRODUCT-RAILS-AND-AGENTS.md  AEOS-PRODUCT-VISION.md  AEOS-WORKSPACE-VISION.md
governance/adr/: README.md
governance/dec/: README.md
governance/playbooks/: README.md
governance/rfc/: README.md
governance/standards/: README.md
src/aeos/: cli.py
src/aeos/ai/: __init__.py  config.py  doctor.py  frontier.py
src/aeos/generators/: __init__.py  python.py
src/aeos/memory/: __init__.py  models.py  store.py
src/aeos/project/: __init__.py  inspector.py  registry.py
src/aeos/providers/supabase/: __init__.py  checker.py
src/aeos/providers/supabase/rls/: __init__.py  generator.py  hardener.py  planner.py  reviewer.py
src/aeos/reclaim/: __init__.py  evidence.py  hardener.py  inspector.py  planner.py  recovery.py  stages.py
src/aeos/report/: __init__.py  generator.py
src/aeos/sovereignty/: __init__.py  checker.py
src/aeos/ui/: __init__.py  dashboard.py  evidence_pack.py  workspace.py
src/aeos/workspace/: __init__.py  demo.py  init.py  ux.py
src/ai_foundation_kit/: __init__.py
tests/fixtures/realistic_projects/lovable_supabase_vercel/: .env.example  README.md  package.json
tests/fixtures/realistic_projects/lovable_supabase_vercel/src/: App.tsx
tests/fixtures/realistic_projects/lovable_supabase_vercel/src/integrations/supabase/: client.ts
tests/fixtures/realistic_projects/lovable_supabase_vercel/supabase/migrations/: 001_init.sql
tests/integration/: test_external_project_audit.py  test_reclaim_external.py  test_rls_external.py  test_supabase_external.py
tests/unit/: test_ai.py  test_build_planner.py  test_build_scaffold.py  test_cli.py  test_generators.py  test_memory_cli.py  test_project.py  test_project_registry.py  test_reclaim.py  test_reclaim_evidence.py  test_reclaim_hardener.py  test_reclaim_planner.py  test_reclaim_recovery.py  test_reclaim_stages.py  test_report.py  test_rls_generate_output.py  test_rls_generator.py  test_rls_hardener.py  test_rls_planner.py  test_rls_reviewer.py  test_sovereignty.py  test_supabase.py  test_ui_dashboard.py  test_ui_evidence_pack.py  test_ui_portfolio.py  test_ui_workspace.py  test_version.py  test_workspace_demo.py  test_workspace_init.py  test_workspace_ux.py
