[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# ==============================================================================
# Project metadata — PEP 621
# ==============================================================================

[project]
name = "aeos"
version = "0.1.0"
description = "AEOS — AI Engineering Operating System for building sovereign, open-source digital products."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
authors = [{ name = "AEOS Contributors" }]
keywords = ["ai", "engineering", "framework", "open-source"]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Libraries :: Application Frameworks",
  "Typing :: Typed",
]
dependencies = [
  "typer>=0.12",
]

[project.scripts]
aeos = "aeos.cli:app"

[project.urls]
Homepage = "https://github.com/metharajal/AI-Foundation-Kit"
Repository = "https://github.com/metharajal/AI-Foundation-Kit"
Documentation = "https://github.com/metharajal/AI-Foundation-Kit#readme"
Changelog = "https://github.com/metharajal/AI-Foundation-Kit/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
  "ruff>=0.4",
  "mypy>=1.10",
]
test = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "pytest-cov>=5.0",
]
docs = [
  "mkdocs-material>=9.5",
  "mkdocstrings[python]>=0.25",
]

# ==============================================================================
# Hatchling build configuration
# ==============================================================================

[tool.hatch.build.targets.wheel]
packages = ["src/aeos"]

# ==============================================================================
# Ruff — linter & formatter
# ==============================================================================

[tool.ruff]
line-length = 88
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "F",   # pyflakes
  "I",   # isort
  "UP",  # pyupgrade
  "B",   # flake8-bugbear
  "ANN", # flake8-annotations
  "S",   # flake8-bandit (security)
  "RUF", # ruff-specific rules
]
ignore = []

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101"]

[tool.ruff.lint.isort]
known-first-party = ["aeos"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ==============================================================================
# Mypy — static type checking
# ==============================================================================

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
exclude = ["^tests/", "^docs/"]

# ==============================================================================
# Pytest
# ==============================================================================

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = [
  "--strict-markers",
  "--tb=short",
  "-v",
]

# ==============================================================================
# Coverage
# ==============================================================================

[tool.coverage.run]
source = ["src"]
branch = true
omit = ["tests/*", "docs/*"]

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 85
exclude_lines = [
  "pragma: no cover",
  "if TYPE_CHECKING:",
  "raise NotImplementedError",
  "@(abc\\.)?abstractmethod",
]
